# opengl_learn

./: CMakeLists.txt  build_and_run.bat  notes.md
src/: Camera.hpp  Shader.hpp  main.cpp
src/shaders/: triangle.fs  triangle.vs
